# SocketTutorial

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Client/: CMakeLists.txt
Client/src/: main.cpp
Receiver/: CMakeLists.txt
Receiver/src/: main.cpp
Sender/: CMakeLists.txt
Sender/src/: main.cpp
Server/: CMakeLists.txt
Server/src/: main.cpp
Sockets/: CMakeLists.txt
Sockets/include/Sockets/: ClientSocket.hpp  DatagramSocket.hpp  ServerSocket.hpp
Sockets/src/: Abstractions.hpp  AbstractionsPosix.cpp  AbstractionsWin32.cpp  ClientSocket.cpp  Connection.cpp  Connection.hpp  DatagramSocket.cpp  PipeSignal.cpp  PipeSignal.hpp  ServerSocket.cpp
